Update Jekyll and Tailwind design

--- a/_tailwind.css
+++ b/_tailwind.css
@@ -6,26 +6,39 @@
     color: black;
     background-color: #f7f7f7;
   }
+
   @media (prefers-color-scheme: dark) {
     html {
       color: white;
       background-color: #18191a;
     }
   }
-  p {
-    margin: 1em 0;
+
+  [x-cloak] {
+    display: none !important;
   }
-  p:first-child {
-    margin-top: 0;
-  }
-  p:last-child {
-    margin-bottom: 0;
-  }
-  p a {
-    -webkit-text-decoration: revert;
-    text-decoration: revert;
-  }
-  img {
-    margin: auto;
+
+  main article {
+    h1:not(:first-child), p:not(:first-child), blockquote:not(:first-child) {
+      margin-top: 1rem;
+    }
+
+    blockquote {
+      padding-left: 1rem;
+      border-left: thick solid lightgrey;
+      font-style: italic;
+    }
+
+    a {
+      color: #36c;
+
+      &:hover {
+        text-decoration: underline;
+      }
+    }
+
+    img {
+      margin: auto;
+    }
   }
 }
