--- a/_includes/card.html
+++ b/_includes/card.html
@@ -1,3 +1,4 @@
+<a id="{{ include.page.title | slugify }}" class="block relative -top-8 invisible"></a>
 <div class="bg-white dark:text-white mt-4 rounded-lg shadow-md dark:shadow-2xl dark:bg-[#28282B]">
   <div class="flex items-center justify-between px-4 py-2">
     <div class="flex items-center">
@@ -13,7 +14,9 @@
   </div>
 
   <div class="text-justify px-4 py-2 m-auto">
-    {{ include.content }}
+    <article{% if page.layout == "category" and page.lazyload == true and include.clickable == true %} hx-trigger="revealed" hx-get="{{ include.page.url }}" hx-select="article" hx-swap="outerHTML ignoreTitle:true"{% endif %}>
+      {{ include.content }}
+    </article>
   </div>
 
   <div class="py-2 px-4"></div>
