--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,6 +1,7 @@
 ---
 layout: default
 ---
+<a href="#main-content" class="sr-only focus:not-sr-only focus:absolute focus:top-4 focus:left-4 focus:bg-black focus:text-white focus:p-2 focus:z-55">Jump to content</a>
 <div class="bg-[#f7f7f7] dark:bg-[#18191a]" style="opacity: 1;"
      x-data="{ leftSidebarOpen: false, rightSidebarOpen: false }"
      @keydown.escape="leftSidebarOpen = false; rightSidebarOpen = false">
@@ -9,7 +10,7 @@ layout: default
   <div class="flex justify-center">
     {% include sidebar_left.html %}
 
-    <main class="w-full lg:w-2/3 xl:w-2/5 pt-12 px-2">
+    <main id="main-content" class="w-full lg:w-2/3 xl:w-2/5 pt-12 px-2">
       {{ content }}
       <div class="py-2"></div>
     </main>
