Add language switcher to the home page

--- a/files/home/style.css
+++ b/files/home/style.css
@@ -22,10 +22,21 @@ a {
   text-decoration: underline;
   cursor: pointer;
 }
-#button-updates {
+#language-switcher {
   position: absolute;
   top: 1rem;
   right: 1rem;
+  display: flex;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+#language-switcher li {
+  margin: 0 5px;
+}
+#button-updates {
+  text-align: center;
+  margin-bottom: 1em;
   color: #888;
   font-size: 0.75rem;
 }
