--- a/files/home/style.css
+++ b/files/home/style.css
@@ -3,6 +3,7 @@ body {
   flex-direction: column;
   min-height: 100vh;
   margin: 0;
+  padding: 0;
   font-family: Arial, sans-serif;
   font-size: 120%;
 }
@@ -22,6 +23,74 @@ a {
   text-decoration: underline;
   cursor: pointer;
 }
+
+#right-btn {
+  position: fixed;
+  top: 2rem;
+  left: 2rem;
+  padding: 0.5rem;
+  background-color: #e9e9ed;
+  border: solid lightgray 1px;
+  border-radius: 0.25rem;
+  cursor: pointer;
+  z-index: 1000;
+}
+#right-btn .dots {
+  width: 25px;
+  height: 4px;
+  background-color: darkgrey;
+  border-radius: 25%;
+  margin: 2px auto;
+}
+#right-sidebar {
+  position: fixed;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  width: 16rem;
+  background-color: #f1f1f1;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  display: flex;
+  flex-direction: column;
+}
+nav {
+  margin: 5rem 0 0 1rem;
+  padding: 1rem;
+  flex-grow: 1;
+  display: flex;
+  flex-direction: column;
+  /* for Firefox */
+  min-height: 0;
+}
+nav h2 {
+  font-size: 1.25rem;
+  font-weight: bold;
+  margin-bottom: 1rem;
+}
+nav ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  white-space: nowrap;
+  flex-grow: 1;
+  overflow-y: auto;
+  overflow-x: hidden;
+  /* for Firefox */
+  min-height: 0;
+}
+nav ul li {
+  margin-bottom: 0.5rem;
+}
+nav ul li a {
+  display: block;
+  text-decoration: none;
+  color: #333;
+  border-radius: 0.25rem;
+}
+nav ul li a:hover {
+  background-color: #e5e7eb;
+}
+
 #language-switcher {
   position: absolute;
   top: 1rem;
@@ -34,12 +103,14 @@ a {
 #language-switcher li {
   margin: 0 5px;
 }
+
 #button-updates {
   text-align: center;
   margin-bottom: 1em;
   color: #888;
   font-size: 0.75rem;
 }
+
 .title-page {
   display: flex;
   flex-direction: column;
@@ -69,6 +140,7 @@ a {
   font-size: 36px;
   margin-top: 3vh;
 }
+
 .footer .license-text {
   font-size: 20px;
 }
@@ -79,6 +151,7 @@ a {
   font-size: small;
   color: grey;
 }
+
 .btn {
   color: #fff;
   font-size: 36px;
@@ -119,5 +192,8 @@ a {
   body {
     color: white;
     background-color: black;
+  }
+  nav h2 {
+    color: black;
   }
 }
